<?xml version="1.0" encoding="utf-8"?>
<resources>		
    <string name="hello">云词典</string>
    <string name="app_name">云词典</string>  	
 	<!-- 在线词典API -->
 	<string name="hcApi">http://api.dict.cn/ws.php?utf8=true&amp;q=</string>
 	<string name="acbApi">http://dict-co.iciba.com/api/dictionary.php?w=</string>
 	
 	<string name="search">查词</string>    
	<string name="tran">翻译</string>    
	<string name="clear">清空</string> 
	 <string name="tips">提示</string>
    <string name="quit_confirmation">退出云词典?</string>
    <string name="update_content">更新简介</string>
    <string name="system_update_tip">发现新版本，请更新！</string>
    <string name="download_cancel">取消下载</string>
    <string name="dictionary">词典</string>
    <string name="searchboxHint">请输入字词句</string>
    <string name="unsupportvoice">没有安装语音识别</string>
    <string name="voice">语音识别</string>
    <string name="novoicedata">未能识别出语音</string>
    <string name="net_requesting">正在获取网络数据...</string>
    <string name="net_requesting_error">获取网络数据失败</string>
    <string name="pleaselogin">请先登录生词本</string>
    <string name="memo_addword_title">添加到生词本</string>
    <string name="sound_requesting">正在获取发音...</string>
    <string name="sound_fail">获取发音失败</string>
    <string name="wordDetail">查看完整内容</string>
    <string name="dictionary_menu_rotate">更新本地词库</string>
    <string name="dowanload_local_search_data">下载本地词库</string>
    <string name="localword_downloaded_bz">本地词库精简版已下载.</string>
    <string name="localword_downloaded_ty">本地词库增强版已下载.</string>
    <string name="dictionary_menu_rotate_no">本地词库已是增强版无需更新.</string>
    <string name="ask_for_local_search">是否下载本地词库,下载后可加快本地查词速度.</string>
    <string name="is_thesaurus_downLoading">正在下载本地词库.</string>
    <string name="e2c_ciku">英中词库</string>
    <string name="c2e_ciku">中英词库</string>
    <string name="e2c_title">【英汉】</string>
    <string name="e2e_title">【英英】</string>
    <string name="tyc">近义词:</string>
    <string name="fyc">反义词:</string>
    <string name="tyc_title">【近义词】</string>
    <string name="fyc_title">【反义词】</string>
    <string name="cixingbianhua">【词形变化】</string>
    <string name="ciyuan">【词源解说】</string>
    <string name="yufayongfa">【语法用法】</string>
    <string name="yufa">语法</string>
    <string name="yfeg">错句举例与错句分析</string>
    <string name="yfeg_w">错句</string>
    <string name="yfeg_r">订正</string>
    <string name="yfeg_t">翻译</string>
    <string name="yfeg_e">分析</string>
    <string name="yfbx">【词义辨析】</string>
    <string name="scbtip_01">你有</string>
    <string name="scbtip_02">个生词需要复习！</string>
    <string name="word_detail_notfound">没有找到所查单词</string>
    <string name="foundtip">你要查找的是不是:</string>
    <string name="memo">生词本</string>
    <string name="username_label">帐户:</string>
    <string name="password_label">密码:</string>
    <string name="please_input_username">请输入帐户</string>
    <string name="please_input_password">请输入密码</string>
    <string name="register_label">注 册</string>
    <string name="sign_in_label">登 录</string>
    <string name="email_label">邮箱:</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="agreement">同意使用条款</string>
    <string name="uncheck_agreement">请选择同意海词网络服务使用条款。</string>
    <string name="memo_signup">切换帐户</string>
    <string name="memo_setting">生词本设置</string>
    <string name="memo_categorie">分类管理</string>
    <string name="memo_addword">添加生词</string>
    <string name="reg_username_hint">用户名需4个字符以上</string>
    <string name="reg_password_hint">密码需6个字符以上</string>
    <string name="sign_in_failed_tip">登录失败，用户名或密码错误!</string>
    <string name="sign_in_failed_tip_net">登录失败，无法连接到服务器!</string>
    <string name="sign_in_success_tip">登录服务器成功。</string>
    <string name="sign_in_doing">正在登录...</string>
    <string name="register_doing">正在注册...</string>
    <string name="register_success_tip">注册成功!</string>
    <string name="register_success_tip_login">注册成功, 需要现在登录吗?</string>
    <string name="register_fail_tip">注册失败!</string>
    <string name="register_fail_tip_exist">注册失败, 用户名已经存在!</string>
    <string name="register_fail_tip_net">注册失败, 无法连接到服务器!</string>
    <string name="reg_no_username">请填写帐户!</string>
    <string name="reg_no_password">请填写密码!</string>
    <string name="reg_password_less">密码至少六位!</string>
    <string name="memo_addword_ing">正在添加生词...</string>
    <string name="memo_addword_success">添加生词成功</string>
    <string name="memo_addword_repeat">生词已存在</string>
    <string name="memo_addword_fail">添加生词失败</string>
    <string name="memo_delword_success">删除成功</string>
    <string name="memo_delword_fail">删除失败</string>
    <string name="memo_modify_familiar">正在修改熟悉度...</string>
    <string name="memo_modify_familiar_success">修改熟悉度成功</string>
    <string name="memo_modify_familiar_fail">修改熟悉度失败</string>
    <string name="memo_modify_category_title">修改分类</string>
    <string name="memo_modify_category_ing">正在修改分类...</string>
    <string name="memo_modify_category_success">修改分类成功</string>
    <string name="memo_modify_category_fail">修改分类失败</string>
    <string name="memo_category_delete">删除分类</string>
    <string name="memo_category_rename">重命名分类</string>
    <string name="memo_category_add">添加新分类</string>
    <string name="memo_familiar">熟悉度</string>
    <string name="memo_category">分类</string>
    <string name="memo_new_word">生词</string>
    <string name="memo_new_word_isnull">请输入生词</string>
    <string name="categorydetele">删除</string>
    <string name="categoryrename">重命名</string>
    <string name="categoryadd">添加</string>
    <string name="category_add_ing">正在添加新分类...</string>
    <string name="category_delete_ing">正在删除分类...</string>
    <string name="category_rename_ing">正在修改分类名称...</string>
    <string name="category_add_success">添加新分类成功</string>
    <string name="category_add_fail">添加新分类失败</string>
    <string name="category_delete_success">删除分类成功</string>
    <string name="category_delete_fail">删除分类失败</string>
    <string name="category_rename_success">重命名分类成功</string>
    <string name="category_rename_fail">重命名分类失败</string>
    <string name="category_add_cateName_isNull">请输入分类名</string>
    <string name="category_add_cateName_maxLength">分类名称,不得超过4个汉字,或者英文8个字符</string>
    <string name="memo_longclick_title">操作类型</string>
    <string name="wordInterpretation_fail">获取生词释义失败</string>
    <string name="deteleMemoWord_fail">删除生词失败</string>
    <string name="modify_category_tip">生词所在分类已是：</string>
    <string name="memo_delete_memoWord">正在删除生词...</string>
    <string name="memo_familiar_1">很生</string>
    <string name="memo_familiar_2">较生</string>
    <string name="memo_familiar_3">一般</string>
    <string name="memo_familiar_4">较熟</string>
    <string name="memo_familiar_5">很熟</string>
    <string name="memo_sort_familiar">按熟悉度</string>
    <string name="memo_sort_word">按单词</string>
    <string name="memo_order_asc">顺序</string>
    <string name="memo_order_dec">倒序</string>
    <string name="memo_sort_date">按日期</string>
    <string name="memo_nodata">没有数据</string>
    <string name="scb_more">更 多</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="ago">前</string>
    <string name="word_delete_confirmation">是否删除生词?</string>
    <string name="loading_word_fail">加载生词失败,请检查您的网络</string>
    <string name="loading_word">正在加载更多生词...</string>
    <string name="translation">翻译</string>
    <string name="translateInHint">输入需要翻译的文本</string>
    <string name="tip_content_front">还可输入</string>
    <string name="tip_content_back">个英文字符</string>
    <string name="translate_menu_clearinput">清空输入</string>
    <string name="translating">正在翻译...</string>
    <string name="translate_ok">翻译完成</string>
    <string name="translate_err">翻译失败</string>
    <string name="parserdatafail">解析数据失败</string>
    <string name="setting">设置</string>
    <string name="quick_search">通知栏快速查词</string>
    <string name="quick_search_tip">开启后会常驻通知栏，方便进行快捷查词</string>
    <string name="auto_renovate_memo">自动加载生词</string>
    <string name="auto_renovate_memo_tip">生词本自动刷新生词</string>
    <string name="clear_cache">清空缓存</string>
    <string name="clear_cache_tip">清除词典使用中产生的声音、查词、历史等缓存内容</string>
    <string name="set_feedback">反馈</string>
    <string name="set_feedback_tip">您有什么意见建议就告诉我们吧</string>
    <string name="tell_friend">推荐给好友</string>
    <string name="tell_friend_tip">将海词词典推荐给您的好友吧</string>
    <string name="set_check_update">检测更新</string>
    <string name="set_check_update_error">检测更新失败</string>
    <string name="set_update_tip">检测是否有最新版海词词典</string>
    <string name="set_help">使用帮助</string>
    <string name="set_help_tip">教您迅速学会使用海词词典安卓版</string>
    <string name="set_about">关于</string>
    <string name="set_about_tip">来了解我们吧</string>
    <string name="clear_cache_sound">是否清空声音缓存?</string>
    <string name="clear_cache_word">是否清空查词缓存?</string>
    <string name="clear_cache_history">是否清空查词历史?</string>
    <string name="clear_cache_all">是否全部清空?</string>
    <string name="clear_cache_sound_success">已清空声音缓存</string>
    <string name="clear_cache_word_success">已清空查词缓存</string>
    <string name="clear_cache_history_success">已清空查词历史</string>
    <string name="clear_cache_all_success">已全部清空</string>
    <string name="help_link">查看客户端详细操作指南</string>
    <string name="feedback_text01">如果你对海词词典有任何的问题和建议，请反馈给我们。</string>
    <string name="feedback_text02">我想说</string>
    <string name="feedback_text03">请填写你的联系方式，以便尽快得到我们的回复。</string>
    <string name="feedback_content_isnull">请输入反馈内容</string>
    <string name="send_feedback_ing">正在提交...</string>
    <string name="send_feedback_success">提交成功</string>
    <string name="send_feedback_fail">提交失败</string>
    <string name="contract_way">联系方式</string>
    <string name="feedback_sure">提交</string>
    <string name="tell_friend_method">选择推荐方式</string>
    <string name="checking_update">正在检测更新</string>
    <string name="checking_update_fail">检测更新失败,请检查网络</string>
    <string name="memo_getdata_fail_net">获取数据失败, 请检查您的网络连接</string>
    <string name="system_no_update">海词词典已是最新版本</string>
    <string name="is_dict_downLoading">正在下载本新版海词词典.</string>
    <string name="no_email_phonenumber_tip">您还没有填写您的邮箱地址,可能使您将来无法得到更多更好的海词服务,还要继续注册吗?</string>
    <string name="continue_register">继续注册</string>
    <string name="complete_info">完善个人信息</string>
    <string name="share">分享</string>
    <string name="down">下载</string>
    <string name="down_tip">是否下载推荐应用？</string>
    <string name="down_name">名称：</string>
    <string name="down_developer">开发：</string>
    <string name="size">大小：</string>
    <string name="connect_to_network_fail">无法获取有效网络连接.</string>
    <string name="net_fail">获取网络数据失败</string> 
</resources>
