<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_bg"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:textColor="#ffffffff"
            android:textSize="22.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="30.0dip"
        android:background="@drawable/list_mid_nor"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52.0dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/username_label"
                android:textColor="#ff707070"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/registerUserName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:background="#00000000"
                android:hint="@string/please_input_username"
                android:paddingBottom="3.0dip"
                android:paddingLeft="3.0dip"
                android:paddingTop="3.0dip"
                android:singleLine="true"
                android:textColor="#ff707070"
                android:textColorHint="#ffc3c3c3"
                android:textSize="18.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#ffc0c0c0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52.0dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/password_label"
                android:textColor="#ff707070"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/registerPassWord"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:background="#00000000"
                android:hint="@string/please_input_password"
                android:paddingBottom="3.0dip"
                android:paddingLeft="3.0dip"
                android:paddingTop="3.0dip"
                android:password="true"
                android:singleLine="true"
                android:textColor="#ff707070"
                android:textColorHint="#ffc3c3c3"
                android:textSize="18.0sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:background="#ffc0c0c0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="52.0dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/email_label"
                android:textColor="#ff707070"
                android:textSize="18.0sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:background="#00000000"
                android:hint="@string/please_input_email"
                android:paddingBottom="3.0dip"
                android:paddingLeft="3.0dip"
                android:paddingTop="3.0dip"
                android:singleLine="true"
                android:textColor="#ff707070"
                android:textColorHint="#ffc3c3c3"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip"
        android:gravity="center" >

        <ImageView
            android:id="@+id/agreementCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8.0dip"
            android:src="@drawable/checkbox_s" />

        <TextView
            android:id="@+id/agreementText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10.0dip"
            android:text="@string/agreement"
            android:textColor="#ff5398e0"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="20.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <ImageButton
                android:id="@+id/registerBtn02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/register02" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>